--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,11 @@
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-
+      <a href="/#/">Home</a> | <a href="/#/dimple">Dimple</a> | <a href="/#/css">Css</a>
       <div ui-view></div>
 
       <script src="http://d3js.org/d3.v3.min.js"></script>
+      <script src="http://dimplejs.org/dist/dimple.v2.1.2.min.js"></script>
       <script src="js/main.js"></script>
   </body>
 </html>
